Modify Jenkins file

--- a/TAF/Jenkinsfile
+++ b/TAF/Jenkinsfile
@@ -2,11 +2,11 @@ pipeline{
     agent any
 parameters
     {
-        string(name:\"ApplicationUrl\", defaultValue: \"https://www.epam.com/\")
-	   string(name:\"Browser\", defaultValue:\"Chrome\")
-        string(name:\"WebDriverTimeOut\", defaultValue:\"60\")
-        string(name: \"WaitElementTimeOut\", defaultValue: \"80\")
-        string(name:\"LogsPath\", defaultValue:\"Logs\\Logs.txt\" )
+        string(name:"ApplicationUrl", defaultValue: "https://www.epam.com")
+	   string(name:"Browser", defaultValue:"Chrome")
+        string(name:"WebDriverTimeOut", defaultValue:"60")
+        string(name:"WaitElementTimeOut", defaultValue:"80")
+        string(name:"LogsPath", defaultValue:"Logs\\Logs.txt" )
     }
     stages{
         stage ('SetupTests')
